# complexpr-old

./: Cargo.toml  README.md
complexpr-repl/: Cargo.toml
complexpr-repl/src/: main.rs
examples/: beer.cxpr  cat.cxpr  collatz.cxpr  mandelbrot.cxpr  numguess.cxpr  primes.cxpr  truthmachine.cxpr
src/: lib.rs  ops.rs  token.rs  tree.rs  value.rs
src/function/: complex.rs  io.rs  mod.rs  num.rs  ops.rs  random.rs  trig.rs  types.rs  util.rs
tests/: funcs.rs  token.rs
