[package]
name = "complexpr"
version = "0.1.0"
authors = ["trimill"]
edition = "2018"
license = "GPL-3"

[workspace]
members = ["complexpr-repl"]

[features]
default = ["random"]
random = ["rand", "rand_distr"]

[dependencies]
num-traits = { version = "0.2" }
num-rational = { version = "0.3", default-features = false, features = ["std"] }
num-complex = { version = "0.3", default-features = false, features = ["std"] }
regex = "1.4"
lazy_static = "1.4"
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
